# norma

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  plans.md  pyproject.toml  start-script.sh
enginenorma/: actionmapper.py  engine.py  neuralnetwork.py  pyproject.toml
game/: pyproject.toml
game/bagchal/: __init__.py  bagchal.py  constant.py  enum.py  enums.py  exception.py
gamers/: Cargo.toml  pyproject.toml
gamers/src/: bagchal.rs  lib.rs  types.rs
keys/: id_rsa  id_rsa.pub
libbaghchal/: Cargo.toml  libbaghchal.pyi  pyproject.toml
libbaghchal/src/: bagchal.rs  constants.rs  lib.rs  mod.rs  move_translator.rs  types.rs
libbaghchal/src/game/: bagchal.rs  mod.rs  move_translator.rs  moves_checker.rs  repr.rs
libbaghchal/src/helpers/: constants.rs  types.rs  utils.rs
model/: __init__.py  agent.py  bagchal.py  gamesimulation.py  model.py  pyproject.toml
norma/: __init__.py  __main__.py  agent.py  connector.py  format.py  gamesimulation.py  main.py  model.py  notebook.ipynb  pyproject.toml
norma/engine/: __main__.py  agent.py  connector.py  constants.py  gamesimulation.py  helpers.py  model.py
norma/norma/: __main__.py  bench.py  connector.py  goat_model.py  model.py  q_train.py  reward.py  stats.py  tiger_model.py  train.py  utils.py
norma/norma/models/: __init__.py  goat_model.py  tiger_model.py
norma/savedModels/normaGoatModel/: keras_metadata.pb  saved_model.pb
norma/savedModels/normaGoatModel/variables/: variables.data-00000-of-00001  variables.index
norma/savedModels/normaModel/: keras_metadata.pb  saved_model.pb
norma/savedModels/normaModel/variables/: variables.data-00000-of-00001  variables.index
norma/savedModels/normaTargetModel/: keras_metadata.pb  saved_model.pb
norma/savedModels/normaTargetModel/variables/: variables.data-00000-of-00001  variables.index
norma/savedModels/normaTigerModel/: keras_metadata.pb  saved_model.pb
norma/savedModels/normaTigerModel/variables/: variables.data-00000-of-00001  variables.index
policynorma/: gameplayrecord.csv  goat.csv  plot.py  plotting.py  pyproject.toml  tiger.csv
policynorma/engine/: __main__.py  abopponent.py  connector.py  constants.py  finalresult.py  gamesimulation.py  helpers.py  model.py  test.py
policynorma/savedModels/normaGoatModel/: fingerprint.pb  keras_metadata.pb  saved_model.pb
policynorma/savedModels/normaGoatModel/variables/: variables.data-00000-of-00001  variables.index
policynorma/savedModels/normaModel/: saved_model.pb
policynorma/savedModels/normaModel/variables/: variables.data-00000-of-00001  variables.index
policynorma/savedModels/normaTargetModel/: keras_metadata.pb  saved_model.pb
policynorma/savedModels/normaTargetModel/variables/: variables.data-00000-of-00001
policynorma/savedModels/normaTigerModel/: fingerprint.pb  keras_metadata.pb  saved_model.pb
policynorma/savedModels/normaTigerModel/variables/: variables.data-00000-of-00001  variables.index
policynormaa/: pyproject.toml
policynormaa/policynormaa/: __main__.py  abopponent.py  connector.py  constants.py  datageneration.py  helpers.py  model.py
policynormaa/savedModels/normaGoatModel/: fingerprint.pb  keras_metadata.pb  saved_model.pb
policynormaa/savedModels/normaGoatModel [2353 Sims, with Normalization]/: fingerprint.pb  saved_model.pb
policynormaa/savedModels/normaGoatModel [2353 Sims, with Normalization]/variables/: variables.data-00000-of-00001  variables.index
policynormaa/savedModels/normaGoatModel/variables/: variables.data-00000-of-00001  variables.index
server/: .env  docker-compose.yml  main.py  manage.py  pyproject.toml  specification.md  test.py
server/core/: __init__.py  config.py  enums.py  exception.py  game.py  ident.py  redis.py  socket.py
server/endpoints/: __init__.py  game_endpoint.py  health_endpoint.py  session_endpoint.py  statics.py
server/etc/: base.yml  dev.yml
soy/: main.py  pyproject.toml
soy/src/: advantage.py  models.py
square/: pyproject.toml
square/square/: __main__.py  connector.py  model.py
web/: package.json  testcomp.jsx
web/src/: App.css  App.js  index.css  index.js
web/src/components/Analysis/: Analysis.jsx
web/src/components/Board/: Board.jsx  Square.jsx
web/src/components/Board/styles/: board.css
web/src/components/Goat/: Goat.jsx
web/src/components/Goat/styles/: goat.css
web/src/components/Intersection/: Intersection.jsx
web/src/components/NormaPlay/: NormaPlay.jsx
web/src/components/NormaPlay/styles/: online.css
web/src/components/Online/: Online.jsx
web/src/components/Online/styles/: online.css
web/src/components/StartScreen/: StartScreen.jsx
web/src/components/StartScreen/styles/: start.css
web/src/components/Tiger/: Tiger.jsx
web/src/components/Tiger/styles/: tiger.css
web/src/components/WebGame/: WebGame.jsx  WebSockIntersection.jsx
web/src/context/: GameContext.jsx  OnlineGameContext.jsx
web/src/utils/: API.jsx  config.jsx  gamma.js  useSocket.jsx
