[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["javaclll <yugu.upadhyaya@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.23.3"
tensorflow = "^2.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
