[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["javaclll <yugu.upadhyaya@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.23.3"
tensorflow-macos = {version = "^2.10.0", platform = "darwin"}
tensorflow = {version = "^2.12.0", platform = "linux"}
bagchal = {path = "../game", develop = true}
tensorflow-metal = {version = "^0.6.0", platform = "darwin"}
websocket-client = "^1.4.1"
rel = "^0.4.7"
matplotlib = "^3.7.1"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
